tests/baselines/reference/destructuredLateBoundNameHasCorrectTypes.errors.txt
destructuredLateBoundNameHasCorrectTypes.ts(11,8): error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.
destructuredLateBoundNameHasCorrectTypes.ts(11,37): error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ prop2: any; }'.


==== destructuredLateBoundNameHasCorrectTypes.ts (2 errors) ====
    let { [Symbol.iterator]: destructured } = [];
    void destructured;
    
    const named = "prop";
    
    let { [named]: computed } = { prop: "b" };
    void computed;
    
    const notPresent = "prop2";
    
    let { [notPresent]: computed2 } = { prop: "b" };
           ~~~~~~~~~~
!!! error TS2339: Property 'prop2' does not exist on type '{ prop: string; }'.
                                        ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'prop' does not exist in type '{ prop2: any; }'.
    